[package]
name = "chat"
version = "0.1.0"
authors = ["rafa <rafa.gdev@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "0.2.9", features = ["full"] }
tokio-util = { version = "0.2", features = ["full"] }
tokio-signal = "0.2"
futures = "0.3"
futures-util = "0.3.0"
bytes = "0.5"
clap = "~2.33.0"

#[[example]]
#name = "server"
#path = "src/main.rs"

